# qt_sql_example_books

./: CMakeLists.txt  README.md  books.pro  books.qrc  main.cpp
